Closed
Bug 266933
Opened 21 years ago
Closed 20 years ago
Flash movies using a WMODE other than "windowed" will not start playing if they are not visible in the page
Categories
(Core Graveyard :: Plug-ins, defect)
Core Graveyard
Plug-ins
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mdoemling, Assigned: bzbarsky)
References
()
Details
(Keywords: helpwanted)
Attachments
(1 file)
|
2.00 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Win98; rv:1.7.3) Gecko/20040913 Firefox/0.10.1
Build Identifier: Mozilla/5.0 (Windows; U; Win98; rv:1.7.3) Gecko/20040913 Firefox/0.10.1
For Flash, if a window mode (WMODE) other than the default of "windowed" is used
the flash movie will only start playing if it is at least in some part visible.
If have tested multiple ways of making the flash "not visible", including
positioning it out of the viewable area with the position style, placing it on
the web page low enough to be outside the viewable area without scrolling and
placing a floating DIV with higher z-index on top of the flash. All these ways
of making the flash not visible will prevent it from starting.
The flash starts playing as soon as it becomes at least partially visible.
I have tested this with Netscape 7.1 and Firefox on Win98 and Netscape 7.1 on
the Mac. This problem occurs only with Windows.
While this behavior may be a "feature" I would consider it a bug.
Reproducible: Always
Steps to Reproduce:
1. create a web page with a flash movie that is initially not visible using a
WMODE of "transparent" or "opaque"
2. load that page
3. make the flash visible by scrolling it into view or other means of making it
visible
Actual Results:
The flash will start playing not before it is visible
Expected Results:
The flash should have started playing independently of its being visible. Or one
could say it should behave in the same way as it does with WMODE=windowed.
| Assignee | ||
Comment 1•21 years ago
|
||
Is it possible that Flash in windowless mode only starts playing the first time
it's asked to paint? If so, wouldn't that be a Flash issue?
| Reporter | ||
Comment 3•21 years ago
|
||
The problem occurs with flash version 7,0,19,0 and I believe with earlier
versions as well.
Comment 4•20 years ago
|
||
This is an automated message, with ID "auto-resolve01".
This bug has had no comments for a long time. Statistically, we have found that
bug reports that have not been confirmed by a second user after three months are
highly unlikely to be the source of a fix to the code.
While your input is very important to us, our resources are limited and so we
are asking for your help in focussing our efforts. If you can still reproduce
this problem in the latest version of the product (see below for how to obtain a
copy) or, for feature requests, if it's not present in the latest version and
you still believe we should implement it, please visit the URL of this bug
(given at the top of this mail) and add a comment to that effect, giving more
reproduction information if you have it.
If it is not a problem any longer, you need take no action. If this bug is not
changed in any way in the next two weeks, it will be automatically resolved.
Thank you for your help in this matter.
The latest beta releases can be obtained from:
Firefox: http://www.mozilla.org/projects/firefox/
Thunderbird: http://www.mozilla.org/products/thunderbird/releases/1.5beta1.html
Seamonkey: http://www.mozilla.org/projects/seamonkey/
Comment 5•20 years ago
|
||
This bug has been automatically resolved after a period of inactivity (see above
comment). If anyone thinks this is incorrect, they should feel free to reopen it.
Status: UNCONFIRMED → RESOLVED
Closed: 20 years ago
Resolution: --- → EXPIRED
Comment 6•20 years ago
|
||
I can reproduce this bug on demand. See bug 315621 for a test case
Comment 7•20 years ago
|
||
*** Bug 315621 has been marked as a duplicate of this bug. ***
Comment 8•20 years ago
|
||
Robert: please try a more recent version (Firefox 1.5 beta or a trunk version)
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/1.5rc2-candidates/
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-trunk/
Status: RESOLVED → UNCONFIRMED
Resolution: EXPIRED → ---
Comment 9•20 years ago
|
||
1.5 RC2 and 1.6a1 exibit the same behavior as 1.0.7 - the flash movie does not start playing until it is scrolled on to the visible part of the screen when the wmode attribute is specified.
Test case links:
1) wmode specified. xml file does not load or begin playing until scrolled onto the screen.
http://www.kayaktrips.net/wmode.html
2) wmode not specified. xml file loads and begins playing even while off screen.
http://www.kayaktrips.net/nowmode.html
| Assignee | ||
Comment 10•20 years ago
|
||
Michelle, do you happen to know whether this is something the plugin does on purpose or a side effect of something we do Gecko-side?
Comment 11•20 years ago
|
||
Just added for completeness:
IE and Opera begin playing immediatly using wmode and off screen.
| Assignee | ||
Comment 12•20 years ago
|
||
I wonder whether the issue is the early return in nsObjectFrame::DidReflow for windowless plugins... Does Flash start playing off SetWindow or something?
Comment 13•20 years ago
|
||
The Flash Player is waiting for NPP_SetWindow to be called. When the user scrolls down on this page (http://www.kayaktrips.net/wmode.html), NPP_SetWindow is called and then the Flash movie starts playing.
| Assignee | ||
Comment 14•20 years ago
|
||
OK. Does anyone know why we don't call SetWindow for windowless plugins in DidReflow?
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 98 → All
Hardware: PC → All
Whiteboard: DUPEME
| Assignee | ||
Comment 15•20 years ago
|
||
That code was added in bug 116108 and bug 116093, apparently... Clearly av thought that since he was going to do SetWindow() in Paint() he didn't need to do it in DidReflow(). Perhaps we should just do it in both places?
Yeah, we should.
| Assignee | ||
Comment 17•20 years ago
|
||
Attachment #204997 -
Flags: superreview?(roc)
Attachment #204997 -
Flags: review?(roc)
| Assignee | ||
Comment 18•20 years ago
|
||
Martijn, could you perhaps test that patch on Windows?
Comment 19•20 years ago
|
||
Probably not until next week.
Comment on attachment 204997 [details] [diff] [review]
So like this?
look OK I guess.
Attachment #204997 -
Flags: superreview?(roc)
Attachment #204997 -
Flags: superreview+
Attachment #204997 -
Flags: review?(roc)
Attachment #204997 -
Flags: review+
| Assignee | ||
Updated•20 years ago
|
Assignee: nobody → bzbarsky
Priority: -- → P2
Target Milestone: --- → mozilla1.9alpha
| Assignee | ||
Comment 21•20 years ago
|
||
I checked in the patch. Please test the heck out of windowless plug-ins in tomorrow's trunk builds?
Status: NEW → RESOLVED
Closed: 20 years ago → 20 years ago
Resolution: --- → FIXED
Comment 22•20 years ago
|
||
The testcase still shows the bug for me in a 2005-12-15 trunk windows build of Firefox (using Flash8).
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 23•20 years ago
|
||
OK. In that case, I have no idea what's going on. :(
Assignee: bzbarsky → nobody
Status: REOPENED → NEW
Keywords: helpwanted
Priority: P2 → --
Target Milestone: mozilla1.9alpha → ---
Comment 24•20 years ago
|
||
This seems fixed in my debug build that has the "frame display lists" patch.
Depends on: 317375
Comment 25•20 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060126 Firefox/1.6a1 ID:2006012614
WFM
Status: NEW → RESOLVED
Closed: 20 years ago → 20 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Assignee: nobody → bzbarsky
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•