Windowless plugins should get SetWindow() called on them the same time normal plugins do -- at reflow end, not just paint time.  Bug 266933, r+sr=roc